# Bar-Chart-Race-of-Real-Estate-in-Taiwan

./: .gitignore  DataCollector.py  README.md  main.ipynb  project.ipynb  pyproject.toml  requirements.txt
utils/: DataCollector.py
